・整理 ・mvvm参考追加

--- a/DB/SQLServer/構造関係/インデックスの比較.md
+++ b/DB/SQLServer/構造関係/インデックスの比較.md
@@ -33,6 +33,48 @@ ORDER BY
     I.name;
 ```
 
+## 少し拡張
+
+``` sql
+SELECT
+    [O].[name] AS [ObjectName],
+    [I].[name] AS [IndexName],
+    [I].[type_desc] AS [IndexTypeDesc],
+    [I].[is_primary_key] AS [IsPrimaryKey],
+    [I].[is_unique] AS [IsUnique],
+    [I].[is_disabled] AS [IsDisabled],
+    [IndexKeys] = STUFF((
+        SELECT
+            CONCAT(
+                ', ',
+                [AC].[name],
+                CASE
+                    WHEN [is_descending_key] = 1 THEN ' - DESC'
+                    ELSE ''
+                END
+            )
+        FROM
+            [Database].[sys].[index_columns] AS [IC]
+            JOIN [Database].[sys].[all_columns] AS [AC]
+            ON  [IC].[object_id] = [AC].[object_id]
+            AND [IC].[column_id] = [AC].[column_id]
+        WHERE
+            [IC].[object_id] = [I].[object_id]
+            AND [IC].[index_id] = [I].[index_id]
+            AND [is_included_column] = 0 
+            FOR XML PATH(''), TYPE
+    ).value('.', 'VARCHAR(MAX)'), 1, 2, '')
+FROM
+    [Database].[sys].[indexes] AS [I]
+    INNER JOIN [Database].[sys].[objects] AS [O]
+    ON [I].[object_id] = [O].[object_id]
+WHERE
+    [I].[index_id] > 0
+    AND [O].[is_ms_shipped] = 0
+ORDER BY 
+    [O].[name]
+```
+
 ---
 
 ## Diff方式
