・実装の強制 ・dotnetプロジェクト参考追加 ・diサンプル修正

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -251,6 +251,50 @@ commit
 >なので、全てのメソッドを抽象化できるようであれば、インターフェースを使いましょう。  
 [【Java】オブジェクト指向：継承の問題点を解決する「抽象クラス」について](http://www.code-magagine.com/?p=2246)
 
+## 実装の強制
+
+オブジェクト指向的には当たり前かもしれないが、個人的に感動したので残す。  
+
+``` cs
+interface IDatMigrator
+{
+    void Execute()
+}
+
+abstract class BaseExecutor : IDatMigrator 
+{
+    public abstract void Execute();
+}
+
+abstract class TestExecutor : BaseExecutor 
+{
+    public override void Execute()
+    {
+        // Hoge
+    }
+}
+```
+
+``` cs
+class DatTestMigrationStrategy : TestExecutor, IDatMigrator
+{
+    // 実装の強制警告は発生しない
+}
+```
+
+``` cs
+class DatTestMigrationStrategy :  IDatMigrator
+{
+    // 強制警告が発生する。
+}
+```
+
+`class DatTestMigrationStrategy : TestExecutor, IDatMigrator` の場合、`DatTestMigrationStrategy` は `TestExecutor` から既に実装されているメソッドを継承するため、`IDatMigrator` インターフェースで定義されたメソッドの実装が強制されない。  
+一方で、`class DatTestMigrationStrategy : IDatMigrator` の場合は、TestExecutor クラスを継承していないため、IDatMigrator インターフェースで定義されたメソッドの実装が強制される。  
+
+継承したクラスがインターフェースのメソッドを実装していた場合、それを検出するので警告が発生しない。  
+オブジェクト指向すごいけど、難しい。  
+
 ---
 
 ## DataGridの全選択ボタンの制御
