--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -1,5 +1,16 @@
 # 後でまとめたいやつら
 
+・gRPCのStreamについて
+・Redis
+・SignalR + Redis
+・会計情報を保存するテーブルとしてベストな設計は何か？
+
+・ファクトリパターン
+
+・カラーピッカー
+・コンストラクタインジェクションの数が多くなってきた場合の対処法
+  ・引数をインターフェースとしてまとめることはできるのか？
+
 c# インターフェース DI
 [「DI使うとインタフェース地獄に陥るらしいから使いたくない」と言っていたA氏がインタフェースを使わずにDIで幸せになるまで - Qiita](https://qiita.com/jun1s/items/55b12c7febd7de6a0a45)  
 
@@ -258,7 +269,7 @@ commit
 ``` cs
 interface IDatMigrator
 {
-    void Execute()
+    void Execute();
 }
 
 abstract class BaseExecutor : IDatMigrator 
