・sql問題 ・is,exists ・遊び

--- a/DB_SQL/OTHER/連番生成.md
+++ b/DB_SQL/OTHER/連番生成.md
@@ -4,9 +4,36 @@ SQLServer前提で進める。
 
 ---
 
-## 再帰クエリで生成
+## CTE + 再帰クエリで生成
 
-共通テーブル式(CTE)を使うことで再帰問い合わせが可能になります。
+### 案1. WHERE
+
+``` sql
+WITH SeqTable AS (
+    SELECT 1 AS SeqNo
+    UNION ALL
+    SELECT SeqNo+1 FROM SeqTable WHERE SeqNo < 100
+)
+SELECT SeqNo 
+FROM SeqTable 
+```
+
+### 案2. TOP
+
+``` sql
+WITH SeqTable AS (
+    SELECT 1 AS SeqNo
+    UNION ALL
+    SELECT SeqNo+1 FROM SeqTable
+)
+SELECT TOP 100 SeqNo 
+FROM SeqTable
+```
+
+### おまけ
+
+[[このサイト(SQL で動的に連番テーブルを生成する)](https://sql55.com/query/generate-sequence-number.php)]で紹介されていた例  
+上記2つができるならわざわざこれを採用する必要はない。  
 
 ``` sql
 DECLARE @N INT = 10;
