・window,filter ・cteの再帰 ・整理

--- a/DB_SQL/OTHER/連番生成.md
+++ b/DB_SQL/OTHER/連番生成.md
@@ -48,6 +48,131 @@ SELECT SEQ FROM SeqTable OPTION(MAXRECURSION 32767);
 
 ---
 
+## CTEの再帰
+
+``` sql
+-- CTE
+WITH SeqTable AS (
+    SELECT 1 AS SeqNo
+    UNION ALL
+    SELECT SeqNo+1 FROM SeqTable WHERE SeqNo < 5
+)
+SELECT * FROM SeqTable
+/*
+1
+2
+3
+4
+5
+*/
+
+-- 愚直に再帰
+SELECT 1 AS SeqNo
+UNION ALL
+SELECT A1.SeqNo + 1 FROM 
+(
+    SELECT 1 AS SeqNo
+    UNION ALL
+    SELECT A2.SeqNo + 1 FROM 
+    (
+        SELECT 1 AS SeqNo
+        UNION ALL
+        SELECT A3.SeqNo + 1 FROM 
+        (
+            SELECT 1 AS SeqNo
+            UNION ALL
+            SELECT A4.SeqNo + 1 FROM 
+            (
+                SELECT 1 AS SeqNo
+            ) A4
+        ) A3
+    ) A2
+) A1
+```
+
+``` sql
+SELECT 1 AS SeqNo
+UNION ALL
+-- 1 + 1 = 2
+-- 2 + 1 = 3
+-- 3 + 1 = 4
+-- 4 + 1 = 5
+-- 5 + 1 = 6 ← whereで除外される
+SELECT A1.SeqNo + 1 FROM 
+(
+    SELECT 1 AS SeqNo
+    UNION ALL
+    -- 1 + 1 = 2
+    -- 2 + 1 = 3
+    -- 3 + 1 = 4
+    -- 4 + 1 = 5
+    SELECT A2.SeqNo + 1 FROM 
+    (
+        SELECT 1 AS SeqNo
+        UNION ALL
+        -- 1 + 1 = 2
+        -- 2 + 1 = 3
+        -- 3 + 1 = 4
+        SELECT A3.SeqNo + 1 FROM 
+        (
+            SELECT 1 AS SeqNo
+            UNION ALL
+            -- 1 + 1 = 2
+            -- 2 + 1 = 3
+            SELECT A4.SeqNo + 1 FROM 
+            (
+                SELECT 1 AS SeqNo
+                UNION ALL
+                -- 1 + 1 = 2
+                SELECT A5.SeqNo + 1 FROM 
+                (
+                    -- とりあえずここで止める
+                    SELECT 1 AS SeqNo
+                ) A5 
+            ) A4
+        ) A3
+    ) A2
+) A1
+WHERE A1.SeqNo < 5
+
+-- 初期値
+SELECT 1 AS SeqNo
+UNION ALL
+-- 再帰ステップ
+SELECT A1.SeqNo + 1 FROM 
+(
+    SELECT 1 AS SeqNo
+    UNION ALL
+    SELECT A2.SeqNo + 1 FROM 
+    (
+        SELECT 1 AS SeqNo
+        UNION ALL
+        SELECT A3.SeqNo + 1 FROM 
+        (
+            SELECT 1 AS SeqNo
+            UNION ALL
+            SELECT A4.SeqNo + 1 FROM 
+            (
+                SELECT 1 AS SeqNo
+                WHERE 1 < 5 -- 1は条件を満たすため、この行が選択される
+                UNION ALL
+                SELECT A5.SeqNo + 1 FROM 
+                (
+                    SELECT 1 AS SeqNo
+                ) A5
+                WHERE 2 < 5 -- 2は条件を満たすため、この行が選択される
+            ) A4
+            WHERE 3 < 5 -- 3は条件を満たすため、この行が選択される
+        ) A3
+        WHERE 4 < 5 -- 4は条件を満たすため、この行が選択される
+    ) A2
+    WHERE 5 < 5 -- 5は条件を満たさないため、この行は選択されず、再帰が終了する
+) A1
+WHERE A1.SeqNo < 5
+```
+
+---
+
 ## ROWNUMBER()で生成
 
 ``` sql
