・参考追加 ・リンク整理

--- a/DB/OTHER/トランザクション分離レベル.md
+++ b/DB/OTHER/トランザクション分離レベル.md
@@ -134,3 +134,7 @@ PostgreSQL    | READ COMMITTED
 Oracle        | READ COMMITTED
 SQL Server    | READ COMMITTED
 ```
+
+---
+
+[DBMS複数利用時の問題とトランザクションの分離を学ぼう！（ダーティーリード、ファントムリード、READ COMMITTEDなど）](https://itmanabi.com/transaction-isolation/)  
