--- a/後でまとめる/イオンの税金計算.md
+++ b/後でまとめる/イオンの税金計算.md
@@ -1,6 +1,36 @@
-# 税金計算
+# イオンの税金計算
 
-## イオンの税金計算
+他社の税金計算どうやってるのか気になったのでレシート覗いてみた。  
+
+---
+
+割引は切り上げ、消費税は切り下げの模様。
+
+チョコラBBプラス 1029円  
+おトクーポン割引 5%  
+
+1029 * 0.05 = 51.45円  
+実際の割引価格 52円  
+
+1029 - 52 = 977円  
+小計 : 977円  
+
+税率10%
+977 * 0.1 = 97.7円  
+実際に消費税表記 : 97円  
+
+|||
+|---|--:|
+|3類 チョコラBBプラス|1029|
+|おトクーポン 5%     | -52|
+|||
+|小計                | 977|
+|外税10%対象額       | 977|
+|外税10%             |  97|
+|||
+|合計                |1074|
+
+---
 
 8%  
 四捨五入  
