--- a/後でまとめる/補数.md
+++ b/後でまとめる/補数.md
@@ -1,5 +1,11 @@
 # 2の補数表現と符号付き・符号なし整数
 
+符号ビット 見分け方
+符号あり、なしは何を持って判断しているのか。
+<https://detail.chiebukuro.yahoo.co.jp/qa/question_detail/q1057126335>
+
+---
+
 ## 2の補数表現
 
 - 2の補数表現は、符号付き整数を効率的に表現するために使用される。
