--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -196,6 +196,144 @@ checkout Release
 commit
 ```
 
+## MAUI環境構築
+
+[【.NET MAUI】開発環境を構築してアプリ開発をはじめる（C#）](https://marunaka-blog.com/net-maui-environment-build-app/7248/)  
+
+## MAUI アンドロイド実機デバッグ
+
+1. Androidデバイスを開発用に設定する  
+   - デバイスの設定で開発者向けオプションを有効にし、USBデバッグをオンにします。  
+   - デバイスに適切なドライバがインストールされていることを確認します。  
+
+2. Visual Studioの設定  
+   - Visual StudioにAndroid SDKとNDKがインストールされていることを確認します。  
+   - Visual Studioのオプションで、Androidデバイスをターゲットとして選択します。  
+
+3. AndroidデバイスをPCに接続する  
+   - USBケーブルを使って、Androidデバイスを開発用PCに接続します。  
+   - デバイスが接続されたことを確認するために、Visual Studioのデバッグターゲットメニューを開き、デバイスがリストに表示されていることを確認します。  
+
+4. 実機デバッグを開始する  
+
+---
+
+## localhostと通信する場合
+
+Androidデバイスでデバッグを行っている際に、localhost（開発マシン上）へのHTTP通信が必要な場合、adb（Android Debug Bridge）を使用してポート転送を設定することができます。
+これにより、実機のアプリケーションから開発マシン上のサーバーに接続できます。
+
+以下の手順に従って、ポート転送を設定してください。
+
+1. AndroidデバイスをPCに接続する  
+   - USBケーブルを使用して、Androidデバイスを開発用PCに接続します。
+
+2. コマンドプロンプトまたはターミナルを開く
+   - 開発マシン上でコマンドプロンプト（Windows）またはターミナル（macOS、Linux）を開きます。
+
+3. adbを使用してポート転送を設定する
+   - 以下のコマンドを実行して、デバイス上の特定のポート（例：5000）を開発マシン上の同じポートに転送します。
+
+   ``` txt
+   adb reverse tcp:5000 tcp:5000
+   ```
+
+   この例では、Androidデバイス上のポート5000を開発マシンのポート5000に転送しています。  
+
+4. アプリケーションでlocalhostを使用する  
+   - Androidアプリケーション内で、通常のようにlocalhost（または127.0.0.1）と指定されたポート番号を使用してHTTP通信を行います。  
+
+ポート転送を設定した後、Androidデバイス上のアプリケーションは、開発マシン上で実行されているサーバーにアクセスできるようになります。
+
+## adb(Android Debug Bridge)のインストール  
+
+1. サイトからインストール  
+2. パスを通す  
+
+とりあえず動かしたい場合はフルパスで`adb.exe`を叩けば良い。  
+
+`C:\platform-tools\adb.exe reverse tcp:7298 tcp:7298`
+
+[Windowsでadbコマンドを使う方法! Android SDKを入れてパソコンのコマンドプロンプトから操作しよう](https://sp7pc.com/google/android/34263#toc3)  
+
+---
+
+## GraphQL
+
+GraphQLの定義
+
+``` graphql
+extend type Query{
+    # Memberのログイン
+    memberLogin(
+        email: String! @rules(apply: ["required"])
+        password: String! @rules(apply: ["required"])
+    ): AccessToken
+}
+
+# ログイン用のトークンを発行
+type AccessToken {
+    accessToken: String
+}
+```
+
+レスポンスの形
+
+``` txt
+{
+  "data": {
+    "memberLogin": {
+      "accessToken": "jwt token strings"
+    }
+  }
+}
+```
+
+型安全な方法でレスポンスを受け取る方法
+
+``` cs
+public async Task<string> LoginAsync(string userName, string passWord)
+{
+    var request = new GraphQLRequest
+    {
+        Query = @"
+query($email: String!, $password: String!) {
+  memberLogin(email: $email, password: $password) {
+    accessToken
+  }
+}",
+        Variables = new
+        {
+            email = userName,
+            password = passWord
+        }
+    };
+
+    var response = await _client.SendQueryAsync<MemberLoginResponse>(request);
+    var res = response.Data.MemberLogin.AccessToken;
+    return res;
+}
+
+public class MemberLoginResponse
+{
+    public MemberLogin MemberLogin { get; set; }
+}
+
+public class MemberLogin
+{
+    public string AccessToken { get; set; }
+}
+```
+
+dynamicでも可能
+
+``` cs
+var response = await _client.SendQueryAsync<dynamic>(request);
+var res = response.Data.memberLogin.accessToken as string;
+```
+
+https://code-maze.com/consume-graphql-api-with-asp-net-core/
+
 ---
 
 ## 技術駆動パッケージング
