--- a/後でまとめる/イオンの税金計算.md
+++ b/後でまとめる/イオンの税金計算.md
@@ -53,3 +53,26 @@
 |282(141*2) |23(22.56)|-16(14.1)|266 |21(21.28)|
 |95  |8(7.6)   |-5(4.75) |90  |7(7.2)   |
 |2533|204      |-132     |2401|193      |
+
+---
+
+100円引きの場合
+
+消費税が重い商品に優先して適応される模様。  
+
+||||
+|---|--:|---|
+|10%商品1|228||
+|8%商品1 |233|※|
+|8%商品2 | 70|※|
+|8%商品3 | 70|※|
+|8%商品4 |158|※|
+||||
+|小計                | 759||
+|100円引きクーポン   | 100||
+|外税8%対象額        | 531|233+70+70+158|
+|外税8%              |  42|581 * 0.8|
+|外税10%対象額       | 128|228 - 100|
+|外税10%             |  12||
+||||
+|合計                |713||
