・json ・graphql ・vue

--- a/API/GraphQL/C#/参考.md
+++ b/API/GraphQL/C#/参考.md
@@ -1,2 +1,4 @@
 
 https://code-maze.com/consume-graphql-api-with-asp-net-core/
+
+[GraphQLでGitHubのリポジトリ一覧を取得する](https://zenn.dev/techkind/articles/2107141256_graphql_github)  
