--- a/C#_MAUI/メモ.md
+++ b/C#_MAUI/メモ.md
@@ -16,3 +16,63 @@ public class MainActivity : MauiAppCompatActivity
 ```
 
 [how can i move hamburger menu to right side on maui android? - Stack Overflow](https://stackoverflow.com/questions/75267229/how-can-i-move-hamburger-menu-to-right-side-on-maui-android)  
+
+---
+
+## 丸い画像
+
+Frameを使う方法とBorderを使う方法があるが、Frameはうまく動作しない？  
+一応、下記例ではどちらも同じように出力されるが、Borderのほうが安定しているように感じる。  
+
+``` xml
+<StackLayout>
+    <Frame
+        Padding="0"
+        BackgroundColor="White"
+        CornerRadius="38"
+        HeightRequest="60"
+        HorizontalOptions="Center"
+        IsClippedToBounds="True"
+        VerticalOptions="Center"
+        WidthRequest="60">
+        <ImageButton
+            Padding="5"
+            Aspect="AspectFill"
+            Source="hoge.jpg" />
+    </Frame>
+    <Label HorizontalOptions="Center" Text="Dummy" />
+</StackLayout>
+```
+
+``` xml
+<StackLayout>
+    <Border
+        Padding="0"
+        BackgroundColor="White"
+        HeightRequest="60"
+        HorizontalOptions="Center"
+        Stroke="LightGray"
+        StrokeShape="Ellipse"
+        VerticalOptions="Center"
+        WidthRequest="60">
+        <ImageButton
+            Padding="5"
+            Aspect="AspectFill"
+            Source="hoge.jpg" />
+    </Border>
+    <Label HorizontalOptions="Center" Text="Dummy" />
+</StackLayout>
+```
+
+[Xamarin.Formsで画像を丸く表示する2 - shuhelohelo’s blog](https://shuhelohelo.hatenablog.com/entry/2019/12/07/151541)  
+
+---
+
+## FrameのShadow
+
+Frameではシャドウ、マージン、コンテンツ位置、コーナー半径などが正しく動作しない模様。
+2022/2/21の時点で.NET MAUI Teamの人もborderを推奨してるので、その通りにしたほうがよさそう。
+[Incorrect Frame behavior on WinUI such as shadow, margin, content position, corner radius, etc. · Issue #4804 · dotnet/maui · GitHub](https://github.com/dotnet/maui/issues/4804)  
+
+Borderでいい感じにshadowさせる方法
+[.Net MAUI - Card Views Using Border Control](https://www.c-sharpcorner.com/article/net-maui-card-views-using-border-control/)  
