--- a/C#_MAUI/メモ.md
+++ b/C#_MAUI/メモ.md
@@ -76,3 +76,16 @@ Frameではシャドウ、マージン、コンテンツ位置、コーナー半
 
 Borderでいい感じにshadowさせる方法
 [.Net MAUI - Card Views Using Border Control](https://www.c-sharpcorner.com/article/net-maui-card-views-using-border-control/)  
+
+---
+
+## System.ArgumentException: 'Ambiguous routes matched for...'
+
+3ページ目で`Shell.Current.GoToAsync('..')`したら発生した。  
+
+AppShell.xamlでxaml上とコードビハインドでそれぞれRoutingを定義していたことが原因だった。  
+XAML側の定義を削除したら解決した。  
+
+>これは、XAML（appshellファイル）でルートを登録し、C#のコードビハインドでルートを登録しようとしたときに発生します。  
+>XAMLまたはC#のどちらかを使用して、一度だけルートを登録するようにしてください（両方は使用しないでください）。  
+>[forms - Xamarin Shell Raise Ambiguous Routes matched Exception - Stack Overflow](https://stackoverflow.com/questions/58352925/xamarin-shell-raise-ambiguous-routes-matched-exception)  
