--- a/C#_MAUI/メモ.md
+++ b/C#_MAUI/メモ.md
@@ -1,95 +1,26 @@
 # MAUIメモ
 
-## Shell FlyoutItemのハンバーガーメニューを右に配置する方法
-
-`\Platforms\Android\MainActivity.cs`を以下のように設定するとハンバーガーメニューを右に配置することができるが、これでは全てのコンテンツが右に移動してしまう。  
-
-``` cs
-public class MainActivity : MauiAppCompatActivity
-{
-    protected override void OnCreate(Bundle savedInstanceState)
-    {
-        base.OnCreate(savedInstanceState);
-        Window.DecorView.LayoutDirection = Android.Views.LayoutDirection.Rtl;
-    }
-}
-```
-
-[how can i move hamburger menu to right side on maui android? - Stack Overflow](https://stackoverflow.com/questions/75267229/how-can-i-move-hamburger-menu-to-right-side-on-maui-android)  
-
----
-
-## 丸い画像
-
-Frameを使う方法とBorderを使う方法があるが、Frameはうまく動作しない？  
-一応、下記例ではどちらも同じように出力されるが、Borderのほうが安定しているように感じる。  
-
-``` xml
-<StackLayout>
-    <Frame
-        Padding="0"
-        BackgroundColor="White"
-        CornerRadius="38"
-        HeightRequest="60"
-        HorizontalOptions="Center"
-        IsClippedToBounds="True"
-        VerticalOptions="Center"
-        WidthRequest="60">
-        <ImageButton
-            Padding="5"
-            Aspect="AspectFill"
-            Source="hoge.jpg" />
-    </Frame>
-    <Label HorizontalOptions="Center" Text="Dummy" />
-</StackLayout>
-```
-
-``` xml
-<StackLayout>
-    <Border
-        Padding="0"
-        BackgroundColor="White"
-        HeightRequest="60"
-        HorizontalOptions="Center"
-        Stroke="LightGray"
-        StrokeShape="Ellipse"
-        VerticalOptions="Center"
-        WidthRequest="60">
-        <ImageButton
-            Padding="5"
-            Aspect="AspectFill"
-            Source="hoge.jpg" />
-    </Border>
-    <Label HorizontalOptions="Center" Text="Dummy" />
-</StackLayout>
-```
-
-[このページ(.NET MAUI (UIコントロール) - Qiita)](https://qiita.com/kashin777/items/cb200af6d4f00cc88a63)ではFrameはXamarin.Formsの名残と紹介されており、リンクがBorderに向いているので、やはりBorderを使ったほうがよさそう。  
-
-[Xamarin.Formsで画像を丸く表示する2 - shuhelohelo’s blog](https://shuhelohelo.hatenablog.com/entry/2019/12/07/151541)  
-[.NET MAUI (UIコントロール) - Qiita](https://qiita.com/kashin777/items/cb200af6d4f00cc88a63)  
-[コントロール テンプレート - .NET MAUI | Microsoft Learn](https://learn.microsoft.com/ja-jp/dotnet/maui/fundamentals/controltemplate)  
-
----
-
-## FrameのShadow
-
-Frameではシャドウ、マージン、コンテンツ位置、コーナー半径などが正しく動作しない模様。
-2022/2/21の時点で.NET MAUI Teamの人もborderを推奨してるので、その通りにしたほうがよさそう。
-[Incorrect Frame behavior on WinUI such as shadow, margin, content position, corner radius, etc. · Issue #4804 · dotnet/maui · GitHub](https://github.com/dotnet/maui/issues/4804)  
-
-Borderでいい感じにshadowさせる方法
-[.Net MAUI - Card Views Using Border Control](https://www.c-sharpcorner.com/article/net-maui-card-views-using-border-control/)  
-
----
-
 ## System.ArgumentException: 'Ambiguous routes matched for...'
 
-3ページ目で`Shell.Current.GoToAsync('..')`したら発生した。  
+3階層あるようなページ構成において、3ページ目で`Shell.Current.GoToAsync('..')`したら発生した。  
 
-AppShell.xamlでxaml上とコードビハインドでそれぞれRoutingを定義していたことが原因だった。  
+AppShell.xamlでxaml上とコードビハインドでそれぞれRoutingを定義していると発生する模様。  
 XAML側の定義を削除したら解決した。  
 
 >これは、XAML（appshellファイル）でルートを登録し、C#のコードビハインドでルートを登録しようとしたときに発生します。  
 >XAMLまたはC#のどちらかを使用して、一度だけルートを登録するようにしてください（両方は使用しないでください）。  
 >[forms - Xamarin Shell Raise Ambiguous Routes matched Exception - Stack Overflow](https://stackoverflow.com/questions/58352925/xamarin-shell-raise-ambiguous-routes-matched-exception)  
+
+---
+
+## Shell
+
+シェルにヘッダーフッターを追加する時に参考になりそうな動画。  
+[.NET MAUI Shell Basic Overview (Flyout, Tabs) - YouTube](https://www.youtube.com/watch?v=E9b1Sun0ecc)  
+
+---
+
+## Page
+
+親ページを作って使いまわす時に参考になりそうな動画。  
+[Master Content Page ( Master Page, Partial View ) In .NET MAUI / Xamarin - YouTube](https://www.youtube.com/watch?v=ufMlk8k4Wq4)  
