--- a/C#_MAUI/メモ.md
+++ b/C#_MAUI/メモ.md
@@ -1,5 +1,29 @@
 # MAUIメモ
 
+## MAUI環境構築
+
+[【.NET MAUI】開発環境を構築してアプリ開発をはじめる（C#）](https://marunaka-blog.com/net-maui-environment-build-app/7248/)  
+
+---
+
+## MAUI アンドロイド実機デバッグ
+
+1. Androidデバイスを開発用に設定する  
+   - デバイスの設定で開発者向けオプションを有効にし、USBデバッグをオンにします。  
+   - デバイスに適切なドライバがインストールされていることを確認します。  
+
+2. Visual Studioの設定  
+   - Visual StudioにAndroid SDKとNDKがインストールされていることを確認します。  
+   - Visual Studioのオプションで、Androidデバイスをターゲットとして選択します。  
+
+3. AndroidデバイスをPCに接続する  
+   - USBケーブルを使って、Androidデバイスを開発用PCに接続します。  
+   - デバイスが接続されたことを確認するために、Visual Studioのデバッグターゲットメニューを開き、デバイスがリストに表示されていることを確認します。  
+
+4. 実機デバッグを開始する  
+
+---
+
 ## System.ArgumentException: 'Ambiguous routes matched for...'
 
 3階層あるようなページ構成において、3ページ目で`Shell.Current.GoToAsync('..')`したら発生した。  
