・maui参考追加 ・整理

--- a/C#_MAUI/デザイン系.md
+++ b/C#_MAUI/デザイン系.md
@@ -1,22 +1,5 @@
 # MAUI デザイン関係メモ
 
-## Shell FlyoutItemのハンバーガーメニューを右に配置する方法
-
-`\Platforms\Android\MainActivity.cs`を以下のように設定するとハンバーガーメニューを右に配置することができるが、これでは全てのコンテンツが右に移動してしまう。  
-
-``` cs
-public class MainActivity : MauiAppCompatActivity
-{
-    protected override void OnCreate(Bundle savedInstanceState)
-    {
-        base.OnCreate(savedInstanceState);
-        Window.DecorView.LayoutDirection = Android.Views.LayoutDirection.Rtl;
-    }
-}
-```
-
-[how can i move hamburger menu to right side on maui android? - Stack Overflow](https://stackoverflow.com/questions/75267229/how-can-i-move-hamburger-menu-to-right-side-on-maui-android)  
-
 ---
 
 ## 丸い画像
@@ -92,3 +75,42 @@ Borderでいい感じにshadowさせる方法
 
 [Image Scaling in .NET MAUI – AskXammy](https://askxammy.com/image-scaling-in-net-maui/)  
 [ImageButton - .NET MAUI | Microsoft Learn](https://learn.microsoft.com/ja-jp/dotnet/maui/user-interface/controls/imagebutton)  
+
+---
+
+## ページのカルーセル
+
+[Onboarding Screen UI In .NET MAUI / Xamarin (Using Carousel View) - YouTube](https://www.youtube.com/watch?v=R6Uah-USuxU)  
+
+---
+
+## Flyoutのカスタマイズ
+
+[Custom Flyout Menu in .Net MAUI - YouTube](Custom Flyout Menu in .Net MAUI)  
+[GitHub - Abhayprince/CustomFlyoutMAUI: Customizing Flyout (App Drawer) Menu in .Net MAUI](https://github.com/Abhayprince/CustomFlyoutMAUI.git)  
+
+---
+
+## MUAI With CLI
+
+MAUIをdotnet cliから実行する場合  
+`dotnet build -t:Run -f net6.0-android`  
+
+[.NET MAUI with .NET CLI (Command Line Interface).](https://mauiman.dev/maui_cli_commandlineinterface.html)  
+
+---
+
+## Flyoutのハンバーガーメニューのアイコン
+
+[Flyout menu and static tabs - .Net MAUI - Stack Overflow](https://stackoverflow.com/questions/74931043/flyout-menu-and-static-tabs-net-maui)  
+
+---
+
+## Twitter LikeなFlyout
+
+[Twitter Flyout using .NET MAUI Shell - YouTube](https://www.youtube.com/watch?v=kI91LzE9mNE)  
+
+---
+
+[.NET MAUIで遊そぼう](https://zenn.dev/tnagata012/articles/play-with-maui--acd256eda7a4a9)  
+[Sample-CommToolMauiApp/CommToolMauiApp/Views at master · tnagata012/Sample-CommToolMauiApp · GitHub](https://github.com/tnagata012/Sample-CommToolMauiApp/tree/master/CommToolMauiApp/Views)  
