--- a/C#_MAUI/メモ.md
+++ b/C#_MAUI/メモ.md
@@ -24,6 +24,46 @@
 
 ---
 
+## localhostと通信する場合
+
+Androidデバイスでデバッグを行っている際に、localhost（開発マシン上）へのHTTP通信が必要な場合、adb（Android Debug Bridge）を使用してポート転送を設定することができます。
+これにより、実機のアプリケーションから開発マシン上のサーバーに接続できます。
+
+以下の手順に従って、ポート転送を設定してください。
+
+1. AndroidデバイスをPCに接続する  
+   - USBケーブルを使用して、Androidデバイスを開発用PCに接続します。
+
+2. コマンドプロンプトまたはターミナルを開く
+   - 開発マシン上でコマンドプロンプト（Windows）またはターミナル（macOS、Linux）を開きます。
+
+3. adbを使用してポート転送を設定する
+   - 以下のコマンドを実行して、デバイス上の特定のポート（例：5000）を開発マシン上の同じポートに転送します。
+
+   ``` txt
+   adb reverse tcp:5000 tcp:5000
+   ```
+
+   この例では、Androidデバイス上のポート5000を開発マシンのポート5000に転送しています。  
+
+4. アプリケーションでlocalhostを使用する  
+   - Androidアプリケーション内で、通常のようにlocalhost（または127.0.0.1）と指定されたポート番号を使用してHTTP通信を行います。  
+
+ポート転送を設定した後、Androidデバイス上のアプリケーションは、開発マシン上で実行されているサーバーにアクセスできるようになります。
+
+## adb(Android Debug Bridge)のインストール  
+
+1. サイトからインストール  
+2. パスを通す  
+
+とりあえず動かしたい場合はフルパスで`adb.exe`を叩けば良い。  
+
+`C:\platform-tools\adb.exe reverse tcp:7298 tcp:7298`
+
+[Windowsでadbコマンドを使う方法! Android SDKを入れてパソコンのコマンドプロンプトから操作しよう](https://sp7pc.com/google/android/34263#toc3)  
+
+---
+
 ## System.ArgumentException: 'Ambiguous routes matched for...'
 
 3階層あるようなページ構成において、3ページ目で`Shell.Current.GoToAsync('..')`したら発生した。  
