--- a/C#_MAUI/デザイン系.md
+++ b/C#_MAUI/デザイン系.md
@@ -86,7 +86,7 @@ Borderでいい感じにshadowさせる方法
 
 ## Flyoutのカスタマイズ
 
-[Custom Flyout Menu in .Net MAUI - YouTube](Custom Flyout Menu in .Net MAUI)  
+[Custom Flyout Menu in .Net MAUI - YouTube](https://www.youtube.com/watch?v=qs1otgknDHA)  
 [GitHub - Abhayprince/CustomFlyoutMAUI: Customizing Flyout (App Drawer) Menu in .Net MAUI](https://github.com/Abhayprince/CustomFlyoutMAUI.git)  
 
 ---
