--- a/C#_MAUI/デザイン系.md
+++ b/C#_MAUI/デザイン系.md
@@ -106,9 +106,13 @@ MAUIをdotnet cliから実行する場合
 
 ---
 
-## Twitter LikeなFlyout
+## MAUIでTwitter再現
 
+Twitter LikeなFlyout  
 [Twitter Flyout using .NET MAUI Shell - YouTube](https://www.youtube.com/watch?v=kI91LzE9mNE)  
+
+Twitterの見た目だけ再現  
+[Twitter UI Build using .Net MAUI Part 1 - YouTube](https://www.youtube.com/watch?v=ebhpfkGMKl0)  
 
 ---
 
