--- a/C#_MAUI/メモ.md
+++ b/C#_MAUI/メモ.md
@@ -22,6 +22,8 @@ XAML側の定義を削除したら解決した。
 
 ## Publisher/Subscriber Pattern ・ Prism EventAggregator
 
+MauiはデフォルトでPublisher/Subscriberパターンを実装している模様。  
+
 ``` cs
 protected override void OnNavigating(ShellNavigatingEventArgs args)
 {
@@ -60,6 +62,8 @@ public VariantViewModel(ConfigurationService service)
 ---
 
 ## Preferrence
+
+MAUIのグローバルストレージ的なモノらしい。  
 
 [.NET MAUI で設定を保存する(Preferences) | 開発者のごみ箱](https://developers-trash.com/archives/1249)  
 
@@ -138,3 +142,20 @@ public partial class MainPage : ContentPage
 
 [App Configuration Settings in .NET MAUI (appsettings.json) - James Montemagno](https://montemagno.com/dotnet-maui-appsettings-json-configuration/)  
 [GitHub - jamesmontemagno/dotnet-maui-configuration: How to use appsettings.json in .NET MAUI](https://github.com/jamesmontemagno/dotnet-maui-configuration)  
+
+---
+
+## VersionTracking
+
+VersionTracking.CurrentVersionは、アプリケーションの現在のバージョン番号を返すメソッド。  
+アプリケーションが最後に起動したときのバージョンを参照する。  
+Platformsフォルダの各プラットフォームのそれぞれのファイルに記述されている。  
+
+- Android  
+  - AndroidManifest.xml内のandroid:versionName属性  
+- iOS  
+  - Info.plistファイルのCFBundleShortVersionStringキー  
+- Windows  
+  - Package.appxmanifestファイルのIdentity Version属性  
+
+[Xamarin.Essentials VersionTracking を使用して、アプリの新機能をユーザーにアピールする - YouTube](https://www.youtube.com/watch?v=-2JlbepO_Mc)  
