--- a/C#_MAUI/デザイン系.md
+++ b/C#_MAUI/デザイン系.md
@@ -81,6 +81,7 @@ Borderでいい感じにshadowさせる方法
 ## ページのカルーセル
 
 [Onboarding Screen UI In .NET MAUI / Xamarin (Using Carousel View) - YouTube](https://www.youtube.com/watch?v=R6Uah-USuxU)  
+[Mastering MAUI CarouselView & MAUI IndicatorView: DotNet MAUI Tutorial - YouTube](https://www.youtube.com/watch?v=kw9-_GLruUg)  
 
 ---
 
