--- a/C#_MAUI/デザイン系.md
+++ b/C#_MAUI/デザイン系.md
@@ -119,3 +119,5 @@ Twitterの見た目だけ再現
 
 [.NET MAUIで遊そぼう](https://zenn.dev/tnagata012/articles/play-with-maui--acd256eda7a4a9)  
 [Sample-CommToolMauiApp/CommToolMauiApp/Views at master · tnagata012/Sample-CommToolMauiApp · GitHub](https://github.com/tnagata012/Sample-CommToolMauiApp/tree/master/CommToolMauiApp/Views)  
+
+[モバイルアプリにおけるUIデザイン - Qiita](https://qiita.com/mark_1975M/items/eabdd95ac1de64e4fe1b)  
