--- a/C#_MAUI/デザイン系.md
+++ b/C#_MAUI/デザイン系.md
@@ -117,6 +117,41 @@ Twitterの見た目だけ再現
 
 ---
 
+## Gridの背景を設定する
+
+以下のようにGridとイメージを配置した時、イメージが表示されなかった。
+
+``` xml
+<ContentPage>
+    <!--  コンテンツ  -->
+    <Grid Margin="10,30,10,20" RowDefinitions="200,20,*">
+        <Image Aspect="AspectFit" ... />
+
+        <Border>
+        </Border>
+    </Grid>
+</ContentPage>
+```
+
+2重にGridを配置したら行けた。  
+
+``` xml
+<ContentPage>
+    <Grid>
+        <Image Aspect="AspectFit" ... />
+
+        <!--  コンテンツ  -->
+        <Grid ... >
+
+        </Grid>
+    </Grid>
+</ContentPage>
+```
+
+[xaml - .NET MAUI Full scale background image (overlay elements) - Stack Overflow](https://stackoverflow.com/questions/73671695/net-maui-full-scale-background-image-overlay-elements)  
+
+---
+
 [.NET MAUIで遊そぼう](https://zenn.dev/tnagata012/articles/play-with-maui--acd256eda7a4a9)  
 [Sample-CommToolMauiApp/CommToolMauiApp/Views at master · tnagata012/Sample-CommToolMauiApp · GitHub](https://github.com/tnagata012/Sample-CommToolMauiApp/tree/master/CommToolMauiApp/Views)  
 
