コミット出来てなかった

--- a/C#_MAUI/メモ.md
+++ b/C#_MAUI/メモ.md
@@ -184,3 +184,39 @@ QRCoderというライブラリで実現出来た。
 ```
 
 [.Net MAUI - QR Code Generator](https://www.c-sharpcorner.com/article/net-maui-qr-code-generator/)  
+
+---
+
+## MAUI MVVM参考
+
+[Creating a Books Tracker App with .NET MAUI and Supabase | HackerNoon](https://hackernoon.com/creating-a-books-tracker-app-with-net-maui-and-supabase)  
+
+[MVVMのModelにまつわる誤解 - the sea of fertility](https://ugaya40.hateblo.jp/entry/model-mistake)  
+[YKSoftware - for WPF Developers](http://yujiro15.net/YKSoftware/MVVM_Introduction.html)  
+[.NET MAUI で MVVM パターンを書いてみよう - 放浪軍師のアプリ開発局](https://www.gunshi.info/entry/2022/07/01/090944)  
+
+---
+
+## 画面遷移
+
+[.NET MAUI (いろんな画面遷移) - Qiita](https://qiita.com/kashin777/items/2f1abcba9c8fa02b592c)  
+
+---
+
+## RefreshView
+
+下に引っ張るとローディングのクルクルが走るアレ。  
+
+[Pull-To-Refresh, EmptyView and Layouts with CollectionView - .NET Maui Crash Course #7 - YouTube](https://www.youtube.com/watch?v=invsT4ST1SI)  
+[dotnet-maui-workshop/Part 5 - CollectionView at main · jfversluis/dotnet-maui-workshop · GitHub](https://github.com/jfversluis/dotnet-maui-workshop/tree/main/Part%205%20-%20CollectionView)  
+
+---
+
+## MAUI ディレクトリ戦略
+
+MAUIのディレクトリ構成はただでさえ文献が少ない。  
+これが一番分量が多い。  
+[Development Guide MAUI | Documentation Center](https://docs.aspnetzero.com/en/aspnet-core-mvc/latest/Development-Guide-MAUI)  
+
+Service(通信部分)を実装する時に参考にした。  
+[C# Simple Interfaces: Service. Software is an art form in so many… | by Justin Coulston | Dev Genius](https://blog.devgenius.io/c-simple-interfaces-service-d9d1921912e4)  
