--- a/DB/OTHER/実行計画.md
+++ b/DB/OTHER/実行計画.md
@@ -47,4 +47,10 @@ sqlserver 実行プラン バッチ相対
 
 ---
 
+## A5M2の実行計画の見方
+
+[SQLの実行計画の読み方](https://a5m2.mmatsubara.com/wp/?p=20255)
+
+---
+
 [実行計画の処理](https://use-the-index-luke.com/ja/sql/explain-plan/sql-server/operations)  
