--- a/SystemDesign/設計.md
+++ b/SystemDesign/設計.md
@@ -18,6 +18,10 @@ https://speakerdeck.com/masuda220
 
 ---
 
+[要件定義～システム設計ができる人材になれる記事](https://qiita.com/Saku731/items/741fcf0f40dd989ee4f8)
+
+---
+
 ## ユーザー視点
 
 ［問い］  
