--- a/DB_SQL/OTHER/実行順序.md
+++ b/DB_SQL/OTHER/実行順序.md
@@ -1,6 +1,6 @@
 # SQLの実行順序
 
-''' txt
+``` txt
 FROM句
 ↓
 JOIN句
@@ -16,6 +16,6 @@ SELECT句
 ORDER BY句
 ↓
 LIMIT句
-'''
+```
 
 [SQLの実行順序](https://qiita.com/k_0120/items/a27ea1fc3b9bddc77fa1)
