--- a/DB/DB設計/インデックス/複合インデックス.md
+++ b/DB/DB設計/インデックス/複合インデックス.md
@@ -50,9 +50,8 @@
 
 Q.あるテーブルのカラム(C1, C2, C3) に対して複合インデックスを貼り、その一部のフィールドだけをwhereの条件とした場合、インデックスは効くのか？  
 
-A.効くらしい。  
-ただ、キーの先頭(今回の例でいえばC1)は含める必要がある模様。  
-基本はそうだとして、後はデータベースによる模様。  
+A.キーの先頭(今回の例でいえばC1)を含めれば効く。  
+後はデータベースによる。  
 [このサイト(複合インデックスは、構成列のどの列を指定すれば選択候補に挙がるのか。 - sgyatto's blog)](https://sgyatto.hatenablog.com/entry/2018/11/24/225938)では、データベース毎の仕様を紹介してくれている。  
 
 >ここで問題になるのは複合インデクスの特徴の１つである、「キーとして構成されているカラムの全てが検索条件に指定されていなくても、キーの先頭から途中までのカラムが指定されていれば、インデクスが使われる」という点です。  
@@ -75,9 +74,6 @@ A.効くらしい。
 >先頭列を抽出条件に含まなかったり、偏った部分集合を抽出条件とした場合などは、別のスキャン方法が選択される可能性が高いです。  
 >[複合インデックスは、構成列のどの列を指定すれば選択候補に挙がるのか。 - sgyatto's blog](https://sgyatto.hatenablog.com/entry/2018/11/24/225938)  
 
-- 検索キーワード  
-  - 複合インデックス 一部  
-
 ---
 
 ## 参考
@@ -87,3 +83,8 @@ A.効くらしい。
 
 複合インデックスの一部を指定した場合の、各データベースの挙動を紹介してくれているサイト。  
 [複合インデックスは、構成列のどの列を指定すれば選択候補に挙がるのか。 - sgyatto's blog](https://sgyatto.hatenablog.com/entry/2018/11/24/225938)  
+
+B+木の仕組みを理解していれば複合インデックスとした場合、何故先頭を含める必要があるのかわかる。  
+以下のリンクの解説のが1番わかりやすい。  
+[SQLアンチパターンとBtreeインデックスの関連性]
+(https://devblog.thebase.in/entry/2018/12/09/110000)  
