--- a/DB/DB設計/インデックス/インデックス.md
+++ b/DB/DB設計/インデックス/インデックス.md
@@ -12,6 +12,9 @@
 
 ---
 
+B+木の構造を理解していればインデックスの何たるかを理解出来る。  
+[図解 DB インデックス](https://zenn.dev/suzuki_hoge/books/2022-12-database-index-9520da88d02c4f)
+
 [インデックスと実行計画を理解する@SQLServer](https://qiita.com/okuzou1/items/f710bcde64beb22cd50b)  
 [SQL Serverのインデックスの理解を深める](https://qiita.com/fuk101/items/2e6a225a97a14f0f2850)  
 [インデックスとは？仕組みをわかりやすく解説](https://products.sint.co.jp/siob/blog/index)  
