--- a/DB/SQLServer/メモ.md
+++ b/DB/SQLServer/メモ.md
@@ -128,3 +128,19 @@ select * from sys.key_constraints
 ---
 
 [SQLServer: int型のID値を持つテーブルをできる限り短時間でbigint型に変更する - Qiita](https://qiita.com/maaaaaaaa/items/cdab2d91127ec8169ff1)  
+
+---
+
+## ON PRIMARY句
+
+CREATE TABLE するときの`ON [PRIMARY]`句が何を指しているのか分からなかったので調査。  
+
+``` sql
+CREATE TABLE [dbo].[TableName](
+    [columnA] [int] NULL,
+    [columnB] [nvarchar](50) NULL,
+    ・・・
+) ON [PRIMARY]
+```
+
+[SQL ServerのON [PRIMARY]句って何を意味してるの？ファイルグループの概念も解説 | 煎茶](https://www.simpletraveler.jp/2022/04/09/sql-server%E3%81%AEon-primary%E5%8F%A5%E3%81%A3%E3%81%A6%E4%BD%95%E3%82%92%E6%84%8F%E5%91%B3%E3%81%97%E3%81%A6%E3%82%8B%E3%81%AE%EF%BC%9F%E3%83%95%E3%82%A1%E3%82%A4%E3%83%AB%E3%82%B0%E3%83%AB/)  
