--- a/DB_SQL/未分類メモ.md
+++ b/DB_SQL/未分類メモ.md
@@ -303,3 +303,37 @@ PRINT N'拡張プロパティ [dbo].[TestTable].[PackCD].[MS_Description] を作
 GO
 EXECUTE sp_addextendedproperty @name = N'MS_Description', @value = N'パックCD', @level0type = N'SCHEMA', @level0name = N'dbo', @level1type = N'TABLE', @level1name = N'TestTable', @level2type = N'COLUMN', @level2name = N'PackCD';
 ```
+
+---
+
+## サブクエリでGroupByやOrderByを使う
+
+何がキッカケだったのか覚えていないが、衝撃的な内容だったのでまとめる。  
+Oracleでは問題なく使えるのだが、SQLServerでは駄目な模様。  
+しかし、`OFFSET 0 ROWS`を入れると解決する模様。  
+`OFFSET 0 ROWS`は2012から使える構文なので、それ以前は無理。  
+
+``` sql
+SELECT COUNT(*)
+FROM (
+    SELECT グループID ,名前 ,日付
+    FROM A
+    GROUP BY グループID ,名前 ,日付
+    ORDER BY 日付
+) AS A
+
+--TOP,OFFSET,またはFOR XMLが指定されていない場合、ビュー、インライン関数、派生テーブル、サブクエリ、および共通テーブル式ではORDER BY句は無効です。
+```
+
+``` sql
+SELECT COUNT(*)
+FROM (
+    SELECT グループID ,名前 ,日付
+    FROM A
+    GROUP BY グループID ,名前 ,日付
+    ORDER BY 日付
+    OFFSET 0 ROWS
+) AS A
+```
+
+[AIMEK's blog: SQL Server サブクエリにORDER BYやGROUP BYが使えない！？](https://aimek-developer.blogspot.com/2021/04/sql-server-order-bygroup-by.html)  
