--- a/DDD/メモ.md
+++ b/DDD/メモ.md
@@ -51,6 +51,51 @@ UnitOfWorkクラスはどのディレクトリに入れるべきですか？
 
 ---
 
+## 大量のRepository,Serviceのインジェクション
+
+>アプリケーションを実装していると、データアクセスに関するコードで以下のような課題に突き当たることが多々あるのではないでしょうか。  
+>・サービスクラスに大量の Repository をインジェクションすることになる  
+>→  
+>「集約」こそがこれらに立ち向かう方法なのです。
+>[「集約」でデータアクセスの 3 つの課題に立ち向かう ~ 大量の Repository・整合性のないオブジェクトのロード・N + 1 問題 ~](https://qiita.com/os1ma/items/28f5d03d3b92e6a1e1d8)  
+
+あるある。  
+
+---
+
+## ファクトリークラスでリポジトリをDIして良いのか？
+
+備忘録として残す。  
+必要となった状況的には、フロントから取得した条件を元に、よく使う条件をまとめるための拡張クラスをファクトリーとして分離したい時に、その拡張クラスがデータベースへアクセスを行い、取得した値を使って条件を生成していたためである。  
+データベースアクセス処理をリポジトリとしてDIさせれば簡単な話なのだが、果たしてそれでいいのかわからなかったので調べた。  
+
+参考URLでは問題なくDIして良いらしいが、ChatGPTでは基本的には不適切だが、チームのコーディング規約と相談しながらやれば良いという話で合った。  
+
+>ドメイン駆動設計（DDD）において、ファクトリークラスでリポジトリを依存注入（DI）して使用することは、一般的なプラクティスとしては少し異なるアプローチです。通常、DDDの文脈では以下のような点が考慮されます。
+>
+>1. **ファクトリーの役割**: ファクトリーは主に複雑なオブジェクトの作成を担当します。これは、オブジェクトの作成に関連する複雑さや特定の初期化ロジックをカプセル化することを目的としています。
+>
+>2. **リポジトリの役割**: リポジトリは集約（Aggregate）やエンティティ（Entity）の永続化と再構成（reconstitution）を担>当します。これは、データの永続化層（例えばデータベース）とドメインモデルの間のインターフェースとして機能します。
+>
+>3. **依存注入の使用**: 依存注入は、クラス間の結合を緩和し、モジュール性を高め、テストの容易さを向上させるために使用されます。しかし、その使用は慎重に行う必要があります。
+>
+>ファクトリークラスでリポジトリをDIする場合、いくつかの懸念があります：
+>
+>- **関心の分離**: ファクトリーがリポジトリに依存することは、オブジェクトの作成と永続化の懸念を混在させることになり、関心の分離の原則に反する可能性があります。
+>
+>- **アーキテクチャの複雑さ**: このアプローチはアーキテクチャを不必要に複雑にする可能性があり、保守性や理解しやすさを低下させる可能性があります。
+>
+>- **テストの難しさ**: ファクトリーがリポジトリに依存している場合、ユニットテストがより複雑になる可能性があります。
+>
+>ただし、特定の状況や要件に応じて、このアプローチが適切である場合もあり得ます。  
+>重要なのは、アーキテクチャ上の決定が、ドメインの複雑さやチームの特定のニーズを考慮して行われるべきだということです。もし不確実性がある場合は、チーム内で議論を行い、アーキテクチャの決定を共有することが推奨されます。
+>
+><https://chat.openai.com/share/a3deffae-d6af-4136-b745-077f650aa19e>  
+
+[ファクトリークラスでリポジトリをDIして利用するのはアリでしょうか？具合的にはあるオブジェクトを生成する際、RDBのシーケンスから値を取得するような処理をイメージしてるのですが、ファクトリークラス内でやろうと考えています。ファクトリクラスで..](https://github.com/little-hands/ddd-q-and-a/issues/109)  
+
+---
+
 [自分が現状気に入っているアプリケーションのパッケージ構成をさらす](https://qiita.com/os1ma/items/286eeec028e30e27587d)  
 
 [ボトムアップドメイン駆動設計 後編](https://nrslib.com/bottomup-ddd-2/#outline__5_1)  
