--- a/WorkLog/2023/12_Dec/20231226_Tue.md
+++ b/WorkLog/2023/12_Dec/20231226_Tue.md
@@ -6,9 +6,9 @@ topics: ["dotnet","til"]
 ## tilのディレクトリ案
 
 tilって日々の学びをまとめるリポジトリなわけですが、しっかりルールを決めないでまとめて行くとある日途方にくれます。(多分)  
-自分の場合は、技術毎にディレクトリを切って管理したのですが、技術が横断的な記事になると、どちらのディレクトリにまとめるべきか？という問題が生じ始め、その間にも記事は増えていき、ある時収集が付かなくなって死にました。  
+自分の場合は、技術毎にディレクトリを切って管理したのですが、技術が複数のトピックに渡るような記事になると、どちらのディレクトリに書くべきか？という問題が生じ始め、収集が付かなくなって死にました。  
 
-技術をディレクトリに分けて管理する方法はポピュラーな方法だとは思うのですが、それ以外で何か良い方法はないのか探している次第であります。  
+技術をディレクトリに分けて管理する方法はポピュラーな方法だとは思うのですが、それ以外で何か良い方法はないのか探している次第です。  
 
 GPTに教えてもらったサイトの一つです。  
 とりあえず、ざっくばらんにまとめて行くなら日ごとにメモしていって、ある程度になったら記事としてまとめるのもアリかなと思いました。。  
